--- a/src/styles/GeneralComponents/Home/sliderprueba.scss
+++ b/src/styles/GeneralComponents/Home/sliderprueba.scss
@@ -1,7 +1,10 @@
+.homeContainer {
+  width: 100%;
+}
+
 .slider {
-  width: 95%;
-  margin: auto;
-  overflow:hidden
+  width: 100%;
+  overflow: hidden;
 }
 
 .slider ul {
