--- a/src/styles/GeneralComponents/layout.scss
+++ b/src/styles/GeneralComponents/layout.scss
@@ -98,3 +98,10 @@
         width: 100%;
     }
 }
+
+.grid__container{
+    display: grid;
+    gap: 1rem;
+    grid-auto-rows: 20rem;
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 25rem), 1fr));
+}
