--- a/src/styles/GeneralComponents/Home/sliderprueba.scss
+++ b/src/styles/GeneralComponents/Home/sliderprueba.scss
@@ -38,3 +38,11 @@
 75% {margin-left: -300%;}
 100% {margin-left: -300%;}
 }
+
+// Styles de la seccion de productos
+.cards-container-products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
