--- a/src/styles/GeneralComponents/card.scss
+++ b/src/styles/GeneralComponents/card.scss
@@ -1,19 +1,20 @@
 .card__container{
     display: flex;
-    width: 200px;
+    width: 150px;
     flex-direction: column;
     background-color: rgb(243, 243, 243);
     padding: 25px;
-    border-radius: 25px;
+    border-radius: 10px;
     margin: 25px;
     .card__img--container{
-        width: 200px;
+        width: 150px;
         img{
             width: 100%;
         }
 
     }
-    .card__title--container{
+    .card__title--container {
+        overflow-wrap: break-word;
         
     }
     .card__description--container{        
