--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -8,8 +8,10 @@
 }
 
 .info-container {
+    display: flex;
+    flex-direction: column;
     color: rgb(58, 58, 58);
-    width: 30%;
+    width: 25%;
 }
 
 .button {
@@ -23,4 +25,32 @@
     height: 5%;
     outline: none;
 
+}
+
+.info-container input {
+    background-color: #eeeeee;
+    font-weight: 600;
+    border: none;
+    border-radius: 15px;
+    height: 33px;
+    margin: 10px;
+    padding: 0px 15px 0px 15px;
+}
+
+.info-container input:focus {
+    outline: none;
+}
+
+.info-container select {
+    background-color: #eeeeee;
+    font-weight: 600;
+    border: none;
+    border-radius: 15px;
+    height: 33px;
+    margin: 10px;
+    padding: 0px 15px 0px 15px;
+}
+
+.info-container select:focus {
+    outline: none;
 }
