--- a/src/styles/GeneralComponents/slider.scss
+++ b/src/styles/GeneralComponents/slider.scss
@@ -11,6 +11,9 @@
             position: absolute;
             top: 40%;
             left: 50%;
+            color: rgb(165, 81, 81);
+            font-weight: 600;
+            font-size: 30px;
             transform: translate(-50%, 0);
         }
         .slider__currentImage--img{
