--- a/src/styles/GeneralComponents/adminforms.scss
+++ b/src/styles/GeneralComponents/adminforms.scss
@@ -1,3 +1,20 @@
+.admin-section_image-container {
+    position: relative;
+
+    .admin-section_image {
+        width: 100%;
+    }
+
+    .admin-section_title {
+        position: absolute;
+        color: white;
+        font-size: 2rem;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+    }
+}
+
 
 .product--container {
     margin-bottom: 25px;
