--- a/src/styles/GeneralComponents/card.scss
+++ b/src/styles/GeneralComponents/card.scss
@@ -1,12 +1,15 @@
 .card__container{
     display: flex;
     flex-direction: column;
-    background-color: rgb(243, 243, 243);
-    padding: 25px;
+    background-color: #f3f3f3;
+    padding: 20px;
+    height: 60%;
+    width: 70%;
     border-radius: 10px;
-    margin: 25px;
+    align-items: center;
+    cursor: pointer;
     .card__img--container{
-        width: 150px;
+        width: 100%;
         img{
             width: 100%;
         }
@@ -23,6 +26,24 @@
         
     }
     .card__buttons--container{
-        
+        height: 80%;
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+        margin-top: 8%;
+
+        .card__buttons {
+            background-color: #418fde;
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            padding: 8px 25px;
+            cursor: pointer;
+            height: 30px;
+            outline: none;
+        }
+        .card__buttons:hover {
+            background-color: #479df3;
+        }
     }
 }
