--- a/src/styles/Home/cardsmenu.scss
+++ b/src/styles/Home/cardsmenu.scss
@@ -3,85 +3,98 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-}
 
-.card-column {
-    display: flex;
-    flex-direction: row;
-    height: 70%;
-    width: 35%;
-    justify-content: center;
-    background-color: #f4f5f5;
-    border-radius: 8px;
-    margin-top: 4%
-}
-
-.container-column-img {
-    width: 60%;
-}
-
-.column-img {
-    height: 100%;
-}
-
-.container-column-text {
-    width: 28%;
-    color: grey;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.button {
-    background-color: #418fde;
-    color: #f4f5f5;
-    border:none;
-    border-radius: 12px;
-    padding: 6px 25px;
-    cursor: pointer;
-    height: 15%;
-    outline: none;
-
-}
-
-@media only screen and (max-width: 1024px) {
     .card-column {
-        height: 55%;
-        width: 37%;
-    }
-
-    .container-column-img {
-        height: 90%;
-    }
-
-    .button {
-        height: 19%;
-        margin-bottom: 10px;
-        width: 95px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .card-column {
-        width: 45%;
-    }
-
-    .container-column-img {
-        height: 75%;
-    }
-
-    .button {
-        width: 95px;
-    }
-}
-
-@media only screen and (max-width: 650px) {
-    .container-column-img {
+        display: flex;
+        position: relative;
+        flex-direction: row;
         height: 70%;
-        width: 48%;
-    }
+        width: 35%;
+        justify-content: center;
+        background-color: #f4f5f5;
+        border-radius: 8px;
+        margin-top: 2%;
 
-    .container-column-text {
-        font-size: 15px;
+        .container-column-img {
+            position: absolute;
+            width: 50%;
+            height: 60%;
+            top: 20%;
+            right: 45%;
+            
+            .column-img {
+                height: 100%;
+                width: 100%;
+            }
+        }
+
+        .container-column-text {
+            position: absolute;
+            width: 28%;
+            top: 20%;
+            left: 65%;
+            color: grey;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            .button {
+                background-color: #418fde;
+                color: #f4f5f5;
+                border:none;
+                border-radius: 12px;
+                padding: 6px 25px;
+                cursor: pointer;
+                height: 15%;
+                outline: none;
+            
+            }
+        }
     }
 }
+
+
+
+
+
+// @media only screen and (max-width: 1024px) {
+//     .card-column {
+//         height: 55%;
+//         width: 37%;
+//     }
+
+//     .container-column-img {
+//         height: 90%;
+//     }
+
+//     .button {
+//         height: 19%;
+//         margin-bottom: 10px;
+//         width: 95px;
+//     }
+// }
+
+// @media only screen and (max-width: 768px) {
+//     .card-column {
+//         width: 45%;
+//     }
+
+//     .container-column-img {
+//         height: 75%;
+//     }
+
+//     .button {
+//         width: 95px;
+//     }
+// }
+
+// @media only screen and (max-width: 650px) {
+//     .container-column-img {
+//         height: 70%;
+//         width: 48%;
+//     }
+
+//     .container-column-text {
+//         font-size: 15px;
+//     }
+// }
