--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,48 +1,65 @@
-.product-section-container {
-    display: flex;
-    margin-top: 3%
+.products-section_image-container {
+    position: relative;
+
+    .products-section_image {
+        width: 100%;
+    }
+
+    .products-section_title {
+        position: absolute;
+        color: white;
+        font-size: 2rem;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+    }
 }
 
-.filters-container {
-    width: 20%;
-}
+// .product-section-container {
+//     display: flex;
+//     margin-top: 3%
+// }
 
-.filters-container input {
-    background-color: #eeeeee;
-    font-weight: 600;
-    border: none;
-    border-radius: 15px;
-    height: 33px;
-    margin: 10px;
-    padding: 0px 15px 0px 15px;
-}
+// .filters-container {
+//     width: 20%;
+// }
 
-.filters-container p {
-    margin: 10px;
-    color: rgb(59, 59, 59);
-}
+// .filters-container input {
+//     background-color: #eeeeee;
+//     font-weight: 600;
+//     border: none;
+//     border-radius: 15px;
+//     height: 33px;
+//     margin: 10px;
+//     padding: 0px 15px 0px 15px;
+// }
 
-.filters-container input:focus {
-    outline: none;
-}
+// .filters-container p {
+//     margin: 10px;
+//     color: rgb(59, 59, 59);
+// }
 
-.filters-container select {
-    background-color: #eeeeee;
-    color: rgb(58, 58, 58);
-    font-weight: 600;
-    border: none;
-    border-radius: 15px;
-    height: 33px;
-    margin: 10px;
-    padding: 0px 15px 0px 15px;
-}
+// .filters-container input:focus {
+//     outline: none;
+// }
 
-.filters-container select:focus {
-    outline: none;
-}
+// .filters-container select {
+//     background-color: #eeeeee;
+//     color: rgb(58, 58, 58);
+//     font-weight: 600;
+//     border: none;
+//     border-radius: 15px;
+//     height: 33px;
+//     margin: 10px;
+//     padding: 0px 15px 0px 15px;
+// }
 
-.products-container {
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-}
+// .filters-container select:focus {
+//     outline: none;
+// }
+
+// .products-container {
+//     width: 80%;
+//     display: flex;
+//     flex-wrap: wrap;
+// }
