--- a/src/styles/GeneralComponents/card.scss
+++ b/src/styles/GeneralComponents/card.scss
@@ -7,9 +7,10 @@
     align-items: center;
     cursor: pointer;
     .card__img--container{
-        width: 100%;
         img{
-            width: 100%;
+            width: 220px;
+            height: 124px;
+            object-fit: contain;
         }
 
     }
