--- a/src/styles/GeneralComponents/adminforms.scss
+++ b/src/styles/GeneralComponents/adminforms.scss
@@ -27,14 +27,18 @@
             justify-content: flex-start;
             align-items: center;
             flex-direction: column;
+            
             input, select, textarea{
                 background-color: #eeeeee;
-                font-weight: 600;
+                font-weight: 400;
+                color: #5f5f5f;
+                width: 95%;
                 border: none;
                 border-radius: 15px;
                 height: 33px;
                 margin: 10px;
-                padding: 0px 15px 0px 15px;
+                padding: 0px 0px 0px 8px;
+                font-family: "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
                 &:focus{
                     outline: none;
                 }
@@ -71,6 +75,20 @@
                     }
                 }
             }
+            .create_product--section_label {
+                background-color: rgb(238, 238, 238);
+                height: 2rem;
+                width: 13rem;
+                color: #545454;
+                border-radius: 15px;
+                font-size: 14px;
+                text-align: center;
+                margin-bottom: 5%;
+                align-items: center;
+                display: flex;
+                justify-content: space-around;
+                cursor: pointer;
+            }
         }
     }
     .button {
@@ -85,3 +103,12 @@
         margin-top: 10px
     }
 }
+
+//admin banner
+// @media only screen and (max-width: 768px) {
+//     .admin-section_image-container .admin-section_title {
+//         text-align: center;
+//         width: 90%;
+//         top: 30%;
+//     }
+// }
