--- a/src/styles/Home/cardsmenu.scss
+++ b/src/styles/Home/cardsmenu.scss
@@ -14,6 +14,7 @@
         background-color: #f4f5f5;
         border-radius: 8px;
         margin-top: 2%;
+        transition: transform .4s;
 
         .container-column-img {
             position: absolute;
@@ -51,17 +52,27 @@
             }
         }
     }
+    .card-column:hover {
+        transform: scale(1.1);
+    }
 }
 
 
 
 
 
-// @media only screen and (max-width: 1024px) {
-//     .card-column {
-//         height: 55%;
-//         width: 37%;
-//     }
+@media only screen and (max-width: 2560px) {
+    // .section-container {
+    //     height: 350px;
+    //     display: flex;
+    //     flex-direction: row;
+    //     justify-content: space-evenly;
+        
+    //     .card-column {
+    //     height: 80%;
+    //     width: 28%;
+    //     }
+    // }
 
 //     .container-column-img {
 //         height: 90%;
@@ -86,7 +97,7 @@
 //     .button {
 //         width: 95px;
 //     }
-// }
+}
 
 // @media only screen and (max-width: 650px) {
 //     .container-column-img {
