--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -1,56 +1,107 @@
 .product-container {
     display: flex;
     margin: 20px;
+    margin-bottom: 5%;
+
+    .img-container {
+        width: 67%;
+        border-radius: 15px;
+        background-color: #f9f9f9;
+        .img-product {
+            width: 90%;
+        }
+    }
+
+    .info-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 5%;
+        color: #3a3a3a;
+        width: 25%;
+
+        // .info-container input {
+        //     background-color: #eeeeee;
+        //     font-weight: 600;
+        //     border: none;
+        //     border-radius: 15px;
+        //     height: 33px;
+        //     margin: 10px;
+        //     padding: 0px 15px 0px 15px;
+        // }
+
+        // .info-container input:focus {
+        //     outline: none;
+        // }
+        
+        .info-container_select {
+            background-color: #eeeeee;
+            font-weight: 600;
+            border: none;
+            border-radius: 15px;
+            height: 33px;
+            margin-top: 10px;
+            padding: 0px 15px 0px 15px;
+        }
+        
+        .info-container_select:focus {
+            outline: none;
+        }
+
+        .button {
+            background-color: #418fde;
+            color: #f4f5f5;
+            font-weight: 600;
+            font-size: 15px;
+            border:none;
+            border-radius: 12px;
+            padding: 6px 25px;
+            cursor: pointer;
+            margin-top: 10%;
+            height: 5%;
+            outline: none;
+        
+        }
+    }
 }
 
-.img-container {
-    width: 70%;
+//slider
+.slider {
+	width: 100%;
+	overflow: hidden;
+	position: relative;
 }
 
-.info-container {
-    display: flex;
-    flex-direction: column;
-    color: rgb(58, 58, 58);
-    width: 25%;
+.slider__content,
+.slider__content--item {
+	width: 100%;
+	position: relative;
 }
 
-.button {
-    background-color: #418fde;
-    color: #f4f5f5;
-    font-weight: 600;
-    border:none;
-    border-radius: 12px;
-    padding: 6px 25px;
-    cursor: pointer;
-    height: 5%;
-    outline: none;
-
+.slider__content--item img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
-.info-container input {
-    background-color: #eeeeee;
-    font-weight: 600;
-    border: none;
-    border-radius: 15px;
-    height: 33px;
-    margin: 10px;
-    padding: 0px 15px 0px 15px;
-}
+@media only screen and (max-width: 768px) {
+    .carousel-prev:before, .carousel-next:before {
+        width: 70%;
+    }
+    .product-container {
+        flex-direction: column;
+        .info-container {
+            font-size: 12px;
+            margin-left: 0%;
+            width: 100%;
 
-.info-container input:focus {
-    outline: none;
-}
-
-.info-container select {
-    background-color: #eeeeee;
-    font-weight: 600;
-    border: none;
-    border-radius: 15px;
-    height: 33px;
-    margin: 10px;
-    padding: 0px 15px 0px 15px;
-}
-
-.info-container select:focus {
-    outline: none;
+            .button {
+                padding: 10px 25px;
+                margin-top: 7%;
+            }
+        }
+        .img-container {
+            height: 60%;
+            width: 100%;
+        }
+    }
 }
