search and styles

--- a/src/styles/GeneralComponents/layout.scss
+++ b/src/styles/GeneralComponents/layout.scss
@@ -4,6 +4,7 @@
         
         .layout__header--SearchBarContainer{
             input{
+                background-color: rgb(250, 250, 250);
                 height: 33px;
                 padding: 0 15px;
                 width: 250px;
