--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -64,6 +64,40 @@
     }
 }
 
+//loading
+.lds-dual-ring_container {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .lds-dual-ring {
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+      }
+      .lds-dual-ring:after {
+        content: " ";
+        display: block;
+        width: 64px;
+        height: 64px;
+        margin: 8px;
+        border-radius: 50%;
+        border: 6px solid rgb(201, 201, 201);
+        border-color: rgb(202, 202, 202) transparent rgb(201, 201, 201) transparent;
+        animation: lds-dual-ring 1.2s linear infinite;
+    }
+}
+  @keyframes lds-dual-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+
 //slider
 .slider {
 	width: 100%;
