searchbar, login, burger animation

--- a/src/styles/GeneralComponents/card.scss
+++ b/src/styles/GeneralComponents/card.scss
@@ -16,6 +16,9 @@
     }
     .card__title--container {
         overflow-wrap: break-word;
+        h4{
+            margin: 10px 0;
+        }
         
     }
     .card__description--container{     
