--- a/src/styles/GeneralComponents/layout.scss
+++ b/src/styles/GeneralComponents/layout.scss
@@ -209,12 +209,22 @@
     right: 0;
     background-color: rgb(255, 255, 255);
     flex-direction: column;
-    border-top: 2px solid #6b6b6b;
+    border-top: 1px solid #6b6b6b;
+    border-bottom: 1px solid #6b6b6b;
     position: absolute;
-
+    transition: all ease-in-out 0.1s;
+    height: 0;
+    overflow: hidden;
+    text-align: center;
     li {
+        padding: 10px 0;
         cursor: pointer;
         margin-top: 6px;
         font-size: 14px;
+        border-top: 1px solid rgb(242, 242, 242);
+    }
+    &.animate__slideInDown{
+        height: 145px;
+        transition: all ease-in-out 0.1s;
     }
 }
