--- a/src/styles/GeneralComponents/adminforms.scss
+++ b/src/styles/GeneralComponents/adminforms.scss
@@ -69,6 +69,7 @@
                         border-radius: 10px;
                         padding: 5px;
                         color: white;
+                        margin: 5px 0;
                         svg{
                             margin-left: 5px;
                         }
