color and new icon

--- a/src/styles/Home/filter.scss
+++ b/src/styles/Home/filter.scss
@@ -7,7 +7,7 @@
         text-align: center;
 
         .filter__container-title {
-            color: #418fde;
+            color: #04989e;
         }
     }
 
@@ -30,8 +30,8 @@
             }
 
             .filter-button {
-                border: 1px solid #418fde;
-                color: #418fde;
+                border: 1px solid #04989e;
+                color: #04989e;
                 margin-right: 10px;
                 margin-bottom: 10px;
                 padding: 5px 12px;
@@ -41,7 +41,7 @@
             }
                         
             .filter-button.active {
-                background-color: #418fde;
+                background-color: #04989e;
                 color: #f4f5f5;
                 outline: none;
             }
@@ -54,7 +54,7 @@
             align-items: center;
 
             .button-to_search {
-                background-color: #418fde;
+                background-color: #04989e;
                 color: #fff;
                 border:none;
                 border-radius: 8px;
