--- a/src/styles/GeneralComponents/adminforms.scss
+++ b/src/styles/GeneralComponents/adminforms.scss
@@ -112,7 +112,7 @@
         }
     }
     .button {
-        background-color: #418fde;
+        background-color: #04989e;
         color: #f4f5f5;
         border:none;
         border-radius: 12px;
