--- a/src/styles/GeneralComponents/card.scss
+++ b/src/styles/GeneralComponents/card.scss
@@ -38,7 +38,7 @@
         margin-top: 8%;
 
         .card__buttons {
-            background-color: #418fde;
+            background-color: #04989e;
             color: #fff;
             border: none;
             border-radius: 8px;
