--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -35,7 +35,7 @@
         }
 
         .login-button {
-            background-color: #418fde;
+            background-color: #04989e;
             color: #f4f5f5;
             border:none;
             border-radius: 12px;
