--- a/src/styles/Home/whatsappbutton.scss
+++ b/src/styles/Home/whatsappbutton.scss
@@ -21,10 +21,15 @@
 .btn-wsp:hover{
     background: #20ba5a;
 }
+
+
 @media only screen and (min-width:320px) and (max-width:768px){
     .btn-wsp{
         width:63px;
         height:63px;
         line-height: 66px;
+        &.fixTop{
+            bottom: 70px;
+        }
 	}
 }
