--- a/src/styles/GeneralComponents/layout.scss
+++ b/src/styles/GeneralComponents/layout.scss
@@ -1,6 +1,10 @@
 .layout__main{
     width: 100%;
+    min-height: 100vh;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
         
         .layout__header--SearchBarContainer{
             input{
